--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 src/**/*.json dist/",
     "start": "node dist/app.js",
     "schemas:openapi": "swagger-jsdoc -d src/schemas/definition.yaml src/routes/*.ts 'src/schemas/!(definition).yaml' -o src/schemas/openapi.json"
   },
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/MyCodeForge/Electric-Emergency-and-Disturbance-Dashboard-Portfolio-Project#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "express-openapi-validator": "^5.4.9",
     "swagger-ui-express": "^5.0.1"
   },
