--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "build": "tsc && copyfiles -u 1 src/**/*.json dist/",
+    "build": "tsc",
     "start": "node dist/app.js",
     "schemas:openapi": "swagger-jsdoc -d src/schemas/definition.yaml src/routes/*.ts 'src/schemas/!(definition).yaml' -o src/schemas/openapi.json"
   },
